Revision history for Yum-Line

{{$NEXT}}

0.1.3  2017-03-30 17:22:08 EDT
        - bugfix: Update metadata in both repos when promoting.
        - Only sync latest version of packages.

0.1.2  2016-11-17 15:44:57 EST
        - Support yum's reposync command for sources

0.1.1  2016-06-14 17:05:48 EDT
        - Properly record dependency on Test::Fatal

0.1.0  2016-04-27 15:46:23 EDT
        - Improved documentation
        - Rationalised commands and configuration
        - Behave as documented
        - Support HTTP(S) sources

0.0.4  2016-01-12 16:25:01 EST
        - Support repos with multi-arch packages

0.0.3  2015-12-11 11:40:13 EST
        - Add metadata and follow milla conventions

0.0.2  2015-12-09 17:15:16 EST
        - Added scant documentation

0.0.1  2015-12-09 16:52:36 EST
        - Initial release