@@ -267,6 +267,14 @@ The C<directory> configuration value is the absolute path to the filesystem
 location for the repository structure. All the individual repositories are
 placed under this directory.
 
+=head2 post_update
+
+The C<post_update> configuration value is an array of commands to run after an
+update to any repository. It may contain special values, which are replaced for
+the specific repository being updated: C<$directory> will be replaced with the
+full path to the repository; the special values for L</base> are supported as
+well.
+
 =head2 base
 
 The C<base> configuration value is an object describing the upstream OS
